# aws-sam-rust-hello-world

./: .gitignore  Cargo.toml  Makefile  README.md  template.yaml
src/: main.rs
