[package]
name = "hello"
version = "0.1.0"
authors = ["ichyo <ichyo00@gmail.com>"]
edition = "2018"

[dependencies]
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", rev = "13aa8f01813e6949ca91aedafb286591fdf32217" }
env_logger = "0.8.2"
tokio = { version = "0.2", features = ["macros"] }
